@@ -160,6 +160,7 @@ Build:
 - Increased CMake minimal required version to 3.14, which is required for the
   preinstalled SQLite3 find module.
 - Add an CMake option `WITH_LTO` to enable/disable link time optimization.
+- Set C99 as the explicit, rather than implicit, build standard.
 
 
 2.0.15 - 2022-08-16
